--- a/cate/javascript/first.html
+++ b/cate/javascript/first.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Gogoday.GitHub.io by gogoday</title>
+    <title>javascript 知识</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,14 +22,11 @@
 
         <p class="view"><a href="https://github.com/gogoday">View My GitHub Profile</a></p>
 
-        <ul>
-            <li><a href="/cate/javascript/first.html">fist javascript</a></li>
-        </ul>
     </header>
     <section>
         <h1>
             <a id="----welcome-to-github-pages" class="anchor" href="#----welcome-to-github-pages"
-               aria-hidden="true"><span class="octicon octicon-link"></span></a># ## ### ### Welcome to GitHub Pages.
+               aria-hidden="true"><span class="octicon octicon-link"></span></a>Javascript Pages.
         </h1>
 
         <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author
@@ -80,7 +77,7 @@
         </p>
     </footer>
 </div>
-<script src="javascripts/scale.fix.js"></script>
+<script src="/javascripts/scale.fix.js"></script>
 
 </body>
 </html>
