--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             <a id="----welcome-to-github-pages" class="anchor" href="#----welcome-to-github-pages"
                aria-hidden="true"><span class="octicon octicon-link"></span></a># ## ### ### Welcome to GitHub Pages.
         </h1>
-
+        ´´´
+        <header>
+            <h1>{{title}}</h1>
+        </header>
+        ´´´
         <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author
             your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub
                 Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is
