--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <img class="img-responsive main-logo" style="display:none;" src="" alt="">
           <div class="intro-text">
             <span class="name"><img src="img-badjs-homepage/badjs_logo.png" alt="">badjs2</span>
-            <span class="skills">Badjs前端脚本错误监控及跟踪解决方案</span>
+            <span class="skills">前端脚本错误监控及跟踪解决方案</span>
           </div>
         </div>
         <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -66,7 +66,7 @@
           <a href="https://github.com/iv-web/badjs2" class="btn btn-lg btn-outline">
             <i class="fa fa-github"></i> Github
           </a>
-          <a title="click to copy" class="tip btn btn-lg btn-outline" href="https://ivweb.io/topic/5ae1d90756e71c798a009e32" >
+          <a class="tip btn btn-lg btn-outline" href="https://ivweb.io/topic/5ae1d90756e71c798a009e32" >
             <i class="fa fa-terminal"></i> Docker部署</code>
           </a>
         </div>
