--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Badjs2 - 前端脚本错误监控及跟踪解决方案</title>
 
   <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="b.css?1" rel="stylesheet">
